@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5 Release Candidate 3
+- Fixed bug #28239 (No results returned on SOAP call, no error given). (Dmitry)
 - Added ability to refer to existing .ini variables from within .ini files, as
   in:
     open_basedir = ${open_basedir} ":/new/dir"
